style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    scroll-padding-top: 100px;
}

html {
    scroll-behavior: smooth;
}
  
body {
    background-color: white;
    min-height: 100vh;
    font-size: 23px;
    font-family: 'Orbitron', sans-serif;
    display: flex;
    flex-direction: column;
    align-items: center;
}

nav {
    position: fixed;
    height: 70px;
    width: 100%;
    background: #5b78c7;
    z-index: 2;
}

.logo {
    margin-left: 20px;
    position: absolute;
    top: 35%;
}

.logo-z {
    z-index: 1;
}

.logo img{
    width: 50px;
}

.nav-links {
    display: flex;
    flex-direction: column;
    list-style: none;
    justify-content: space-around;
    align-items: center;
    margin: auto;
    padding-top: 40px;
    position: fixed;
    background-color: #5b78c7;
    height: 100vh;
    width: 100%;
    /* size circle starts at */
    clip-path: circle(80px at 90% -10%);
    -webkit-clip-path: circle(80px at 90% -10%);
    transition: all 1s ease-out;
}

.nav-links.open {
    /* how far the circle extends */
    clip-path: circle(1000px at 90% -10%);
    -webkit-clip-path: circle(1000px at 90% -10%);
    background-color: #475d9b;
}

.nav-links li a{
    color: rgb(255, 255, 255);
    text-decoration: none;
    font-size: 16px;
}

.nav-links li a:hover{
    transition: all .2s ease-in-out;
    color: rgb(228, 169, 61);
}

/* hamburger animation */
svg {
    position: absolute;
    cursor: pointer;
    right: 1%;
    z-index: 3;
    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
}

.active svg {
    transform: rotate(90deg);
}

path {
    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1),
      stroke-dasharray 500ms cubic-bezier(0.4, 0, 0.2, 1),
      stroke-dashoffset 500ms cubic-bezier(0.4, 0, 0.2, 1);
}

path:nth-child(1) {
    transform-origin: 36% 40%;
}

path:nth-child(2) {
    stroke-dasharray: 29 299;
}

path:nth-child(3) {
    transform-origin: 35% 63%;
}

path:nth-child(4) {
    stroke-dasharray: 29 299;
}

path:nth-child(5) {
    transform-origin: 61% 52%;
}

path:nth-child(6) {
    transform-origin: 62% 52%;
}

.active path:nth-child(1) {
    transform: translateX(9px) translateY(1px) rotate(45deg);
}

.active path:nth-child(2) {
    stroke-dasharray: 225 299;
    stroke-dashoffset: -72px;
}

.active path:nth-child(3) {
    transform: translateX(9px) translateY(1px) rotate(-45deg);
}

.active path:nth-child(4) {
    stroke-dasharray: 225 299;
    stroke-dashoffset: -72px;
}

.active path:nth-child(5) {
    transform: translateX(9px) translateY(1px) rotate(-45deg);
}

.active path:nth-child(6) {
    transform: translateX(9px) translateY(1px) rotate(45deg);
}

/* fade effect */
.nav-links li {
    opacity: 0;
}

.nav-links li a{
    font-size: 25px;
}

.nav-links li:nth-child(1) {
    transition: all 0.5s ease 0.2s;
}

.nav-links li:nth-child(2) {
    transition: all 0.5s ease 0.4s;
}

.nav-links li:nth-child(3) {
    transition: all 0.5s ease 0.6s;
}

.nav-links li:nth-child(4) {
    transition: all 0.5s ease 0.8s;
}

li.fade {
    opacity: 1;
}

.home-header {
    background-color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    margin: 100px 0 80px 0;
    animation: fadeInLeft 1s ease-out 1 forwards;
}

/* dev-img fade-in */
@keyframes fadeInLeft {
    0% {
       opacity: 0;
       transform: translateX(-80px);
    }
    100% {
       opacity: 1;
       transform: translateX(0);
    }
}   
  
.dev-img {
    height: 270px;
    width: 270px;
    border-radius: 50%;
    margin: 40px 0 20px 0;
}

h1 {
    font-size: 33px;
    margin-bottom: 15px;
}

/* project section on homepage */
.all-projects-container {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.project-container {
    display: flex;
    align-items: center;
    justify-content: space-around;
    gap: 12px;
    background-color: #5b78c7;
    width: 100%;
    height: 244px;
    color: #FFFFFF;
    font-size: 18px;
    text-align: center;
    padding: 0 15px 0 15px;
    overflow: hidden;
}

.clip {
    clip-path: polygon(0 0%, 100% 7%, 100% 93%, 0% 100%);
    -webkit-clip-path: (0 0%, 100% 7%, 100% 93%, 0% 100%);
}

.clip-mid {
    clip-path: polygon(0% 93%, 0 7%, 100% 0%, 100% 100%);
    -webkit-clip-path: polygon(0% 93%, 0 7%, 100% 0%, 100% 100%);
}

.project-img-container {
    position: relative;
    transform: translateX(-150px);
    opacity: 0;
    transition: 1s all ease;
}

.project-img-container-mid {
    position: relative;
    transform: translateX(150px);
    opacity: 0;
    transition: 1s all ease;
}

.project-img-container.proj-active, .project-img-container-mid.proj-active {
    transform: translateX(0);
    opacity: 1;
}

.project-img-link {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #FFFFFF;
    border-radius: 50%;
    width: 140px;
    height: 140px;
}

.first-project-img {
    width: 100px;
    padding-bottom: 15px;
}

.second-project-img {
    width: 95px;
    padding-bottom: 5px;
}

.third-project-img {
    width: 120px;
}

.about-link {
    display: flex;
    align-items: center;
    text-align: center;
    text-decoration: none;
    color: #FFFFFF;
    background-color: #5b78c7;
    width: 156px;
    height: 156px;
    border-radius: 50%;
    padding: 0 20px 0 20px;
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
    margin: 55px 0 55px 0;
}

.shrink { 
    transition: all .2s ease-in-out; 
}
    
.shrink:hover { 
    transform: scale(0.9); 
}

.grow { 
    transition: all .2s ease-in-out; 
}
    
.grow:hover { 
    transform: scale(1.1); 
}
/* ... */

